    being returned may need to be changed if rational numbers do not
    provide the desired performance.
  - Port directionality has been generalized from a simple input/output
    flag to a bitmap, to allow for multidirectional ports.
  - Weak symbol GC is faster, simpler, and can now collect all
    unreferenced symbols instead of a maximum of 997 per major GC.

- Compiler
  - Fixed an off by one allocation problem in generated C code for (list ...).
  - The "-scrutinize" compiler option has been removed.
  - The "-module" compiler option (aliased as "-m") now expects a module name.

- Tools
  - The new "-link" option to csc allows linking with objects from extensions.

- Core libraries
  - Removed support for memory-mapped files (posix), queues
    (data-structures), binary-search (data-structures), scan-input-lines
    (utils), group-information (posix) and object-eviction (lolevel).
    These are now available as eggs.
  - Removed the srfi-1, srfi-13, srfi-14, srfi-18 and srfi-69 units.
    These are now available as eggs.
  - Added the `executable-pathname` procedure for retrieving a path to
    the currently-running executable.
  - Removed all support for SWIG.
  - `sleep` now suspends the current thread when threading is enabled,
    otherwise it sleeps the process. The new `process-sleep` procedure
    in unit posix can be used to sleep the process unconditionally.
  - `with-error-output-to-port' from the ports module has been renamed
    to the more common `with-error-to-port', and `with-error-to-string'
    has been added for completeness (thanks to Michael Silver).
  - A new `make-bidirectional-port' procedure has been added to the
    ports unit that will combine separate input- and output- ports into
    a single bidirectional port.
  - New `input-port-open?` and `output-port-open?` procedures have been
    added for testing whether a port is open in a specific direction.
  - An `include-relative` form has been added to the chicken module.