@@ -120,9 +120,6 @@ chicken-config.h: chicken-defaults.h
 ifdef GCHOOKS
 	echo "#define C_GC_HOOKS" >>$@
 endif
-ifdef SYMBOLGC
-	echo "#define C_COLLECT_ALL_SYMBOLS" >>$@
-endif
 	cat chicken-defaults.h >>$@
 
 include $(SRCDIR)/rules.make
