@@ -422,7 +422,7 @@ done
 
 echo "======================================== symbol-GC tests ..."
 $compile symbolgc-tests.scm
-./a.out -:w
+./a.out
 
 echo "======================================== finalizer tests ..."
 $interpret -s test-finalizers.scm
